--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -19,3 +19,7 @@ body {
   background: var(--background);
   font-family: Arial, Helvetica, sans-serif;
 }
+
+details[open] summary {
+  background-color: #F1F5F9;
+}
